samples/_failures_safe/1761427846_a12c91_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_85760b42.c: In function ‘main’:
./samples/SAFE/__tmp_85760b42.c:143:9: error: expected declaration or statement at end of input
  143 |         if (strncmp(line, "END", 3) == 0) break;
      |         ^~
./samples/SAFE/__tmp_85760b42.c:143:9: error: expected declaration or statement at end of input
